#
#     Copyright (c) 2013 Battelle Memorial Institute
#     Licensed under modified BSD License. A copy of this license can be
#     found
#     in the LICENSE file in the top level directory of this distribution.
#
# -*- mode: cmake -*-
# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created June 30, 2014 by Bruce Palmer
# Last Change: 2014-06-30 07:55:50 d3g293
# -------------------------------------------------------------

# -------------------------------------------------------------
# installation
# -------------------------------------------------------------
install(FILES 
  gridpack.hpp
  DESTINATION include/gridpack/include
)

